--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vite-plugin-mkcert": "^1.17.5"
     },
     "dependencies": {
         "@inertiajs/inertia-vue3": "^0.6.0",
