--- a/resources/blueprints/collections/products/product.yaml
+++ b/resources/blueprints/collections/products/product.yaml
@@ -65,6 +65,22 @@ tabs:
               visibility: visible
               replicator_preview: true
               hide_display: false
+          -
+            handle: photo
+            field:
+              mode: list
+              container: assets
+              restrict: false
+              allow_uploads: true
+              show_filename: true
+              show_set_alt: true
+              type: assets
+              display: photo
+              listable: hidden
+              instructions_position: above
+              visibility: visible
+              replicator_preview: true
+              hide_display: false
   sidebar:
     display: Sidebar
     sections:
